--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				Format
 			</button>
 		</div>
-		<pre id="editor">{theString: 'weir \u00f3'}</pre>
+		<pre id="editor"></pre>
 		<div id="alertBox"></div>
 
 		<script src="http://code.jquery.com/jquery-1.11.3.min.js" type="text/javascript" charset="utf-8"></script>
